fix some layout bugs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,3 +43,14 @@
 .is-outlined {
     border: 0;
 }
+
+.login {
+    color: white;
+    height: 100%;
+    margin: 0;
+    border-radius: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 8px;
+}
